--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
   // URL to Game rom
-  EJS_gameUrl =
-    "https://drive.google.com/uc?export=view&id=0B8OiJVdB8D6wTUM2SkVneThCWGM&resourcekey=0-QjyjwiWK-IHTIL_olQlrfA&usp=drive_fs"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
+  EJS_gameUrl = "./file/teste.n"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
   // Path to the data directory
   EJS_pathtodata = "data/";
