--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
   // URL to Game rom
-  EJS_gameUrl = "./file/teste.n"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
+  EJS_gameUrl = "./files/teste.n"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
   // Path to the data directory
   EJS_pathtodata = "data/";
