--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
   // URL to Game rom
-  EJS_gameUrl = "./files/teste.n"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
+  EJS_gameUrl =
+    "https://mega.nz/file/5o92wZ6Q#AuIMT91dTELqyFqs60Z4AEy7UhXQIXAAR9lDgWth2ek"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
   // Path to the data directory
   EJS_pathtodata = "data/";
