--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   // URL to Game rom
   EJS_gameUrl =
-    "https://www.dropbox.com/scl/fi/0qn9e46xdvh29ji1wmcjb/Super-Mario-Bros.-3-U-PRG1.nes?rlkey=vodsyhyyjqbh7ehs32prfc788&dl=0"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
+    "https://www.dropbox.com/scl/fi/0qn9e46xdvh29ji1wmcjb/Super-Mario-Bros.-3-U-PRG1.nes?rlkey=vodsyhyyjqbh7ehs32prfc788&raw=1"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
   // Path to the data directory
   EJS_pathtodata = "data/";
