de volta ao vercel

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="width: 640px; height: 480px; max-width: 100%">
+<div style="width: 100%; height: 100%">
   <div id="game"></div>
 </div>
 
@@ -15,8 +15,7 @@
   EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
   // URL to Game rom
-  EJS_gameUrl =
-    "https://dl.dropboxusercontent.com/s/0qn9e46xdvh29ji1wmcjb/Super-Mario-Bros.-3-U-PRG1.nes"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
+  EJS_gameUrl = "./files/teste.n"; // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
   // Path to the data directory
   EJS_pathtodata = "data/";
