--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<style>
+  body,
+  html {
+    margin: 0;
+    padding: 0;
+  }
+</style>
+
 <div style="width: 100%; height: 100%">
   <div id="game"></div>
 </div>
