--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         margin: 0;
         padding: 0;
       }
+
+      #game {
+        width: 100%;
+        height: 100vh;
+      }
     </style>
   </head>
 
