novo teste ranoya.com

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
       // URL to Game rom
-      EJS_gameUrl = "./files/teste.n";
+      //EJS_gameUrl = "./files/teste.n";
+      EJS_gameUrl = "https://www.ranoya.com/namco/blastermaster.n";
       // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
       // Path to the data directory
