nope... nada funciona... maldito CORS

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       EJS_biosUrl = ""; // example: https://dl.dropboxusercontent.com/s/[random-code]/bios.bin
 
       // URL to Game rom
-      //EJS_gameUrl = "./files/teste.n";
-      EJS_gameUrl = "https://www.ranoya.com/namco/blastermaster.n";
+      EJS_gameUrl = "./files/teste.n";
       // example: https://dl.dropboxusercontent.com/s/[random-code]/mario.nes
 
       // Path to the data directory
