puxando tudo da commodor

--- a/c64/index.html
+++ b/c64/index.html
@@ -1,9 +1,10 @@
 
 <!doctype html>
-<head>
-<title>Commodore.ca SPACE INVADERS</title>
-<body style="background-color:transparent; border: 0; margin: 0;">
 
+<body style="background-color:transparent; border: 0; margin: 0;">
+<head>
+    <script src="rocketloader.js" data-cf-settings="aa4070fe4ad058de793d7a8d-|49" defer></script>
+</head>
 </head>
 <html lang="en-us">
 <body>
@@ -16,7 +17,7 @@
                 canvas: document.getElementById('canvas'),
             };
         </script>
-<script type="505c0d926bd5c604be8e89b0-text/javascript" src="https://www.commodore.ca/arcade/x64.js"></script>
+<script type="505c0d926bd5c604be8e89b0-text/javascript" src="x64.js"></script>
 </center>
 </body>
 </html>
