eita... erro idiota.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         $_GET["core"] != null &&
         $_GET["core"] != ""
       ) {
-        EJS_gameUrl = $_GET["core"];
+        EJS_core = $_GET["core"];
       }
 
       // Lightgun
