tirando o que não funciona

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         EJS_core = $_GET["core"];
       }
 
+      EJS_startOnLoaded = true;
+
       // Lightgun
       EJS_lightgun = false; // can be true or false
 
