--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     </div>
 
     <script type="text/javascript">
+      /*
+
+      EMULATOR JS
+      https://emulatorjs.org
+
+      */
+
       $_GET = [];
       (function () {
         corte = window.location.href.toString().indexOf("?");
