--- a/flp/index.html
+++ b/flp/index.html
@@ -62,7 +62,7 @@
       // Lightgun
       EJS_lightgun = false; // can be true or false
 
-      EJS_gameUrl = "../files/k.zip";
+      EJS_gameUrl = "../files/kicker.zip";
 
       if (
         typeof $_GET["rom"] != "undefined" &&
