--- a/flp/index.html
+++ b/flp/index.html
@@ -69,7 +69,7 @@
         $_GET["rom"] != null &&
         $_GET["rom"] != ""
       ) {
-        EJS_gameUrl = $_GET["rom"];
+        EJS_gameUrl = "../" + $_GET["rom"];
       }
     </script>
     <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
