mudando arcade para fbneo

--- a/flp/index.html
+++ b/flp/index.html
@@ -44,7 +44,8 @@
       })();
 
       EJS_player = "#game";
-      EJS_core = "arcade";
+      // EJS_core = "arcade";
+      EJS_core = "fbneo";
       EJS_color = "#0064ff";
       EJS_pathtodata =
         "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
