--- a/flp/index.html
+++ b/flp/index.html
@@ -45,7 +45,10 @@
 
       EJS_player = "#game";
       // EJS_core = "arcade";
-      EJS_core = "fbneo";
+      // EJS_core = "fbneo";
+
+      EJS_core = "mame2003_plus";
+
       EJS_color = "#0064ff";
       EJS_pathtodata =
         "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
