--- a/a8/index.html
+++ b/a8/index.html
@@ -183,7 +183,7 @@
 
       //  emulator.mute();
 
-      emulator.start({ waitAfterDownloading: true });
+      emulator.start({ waitAfterDownloading: false });
     </script>
   </body>
 </html>
