--- a/c64/index.html
+++ b/c64/index.html
@@ -2,6 +2,19 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style>
+      html,
+      body {
+        margin: 0;
+        border: 0;
+        padding: 0;
+      }
+
+      canvas {
+        width: 100% !important;
+        aspect-ratio: 806 / 568 !important;
+      }
+    </style>
   </head>
   <body>
     <div class="emscripten_border">
