--- a/interfaces/index.html
+++ b/interfaces/index.html
@@ -13,7 +13,7 @@
 
     <script>
       Dos(document.getElementById("dos"), {
-        url: "https://cdn.dos.zone/original/2X/9/9ed7eb9c2c441f56656692ed4dc7ab28f58503ce.jsdos",
+        url: "https://namco.vercel.app/interfaces/s7.jsdos",
       });
     </script>
   </body>
