--- a/interfaces/index.html
+++ b/interfaces/index.html
@@ -6,10 +6,22 @@
 
     <!-- js-dos -->
     <script src="https://v8.js-dos.com/latest/js-dos.js"></script>
+
+    <style>
+      html,
+      body {
+        height: 100%;
+      }
+
+      #dos {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
 
   <body>
-    <div id="dos"></div>
+    <div id="dos" style="width: 100%; height: 100%"></div>
 
     <script>
       Dos(document.getElementById("dos"), {
