--- a/interfaces/index.html
+++ b/interfaces/index.html
@@ -11,11 +11,17 @@
       html,
       body {
         height: 100%;
+        border: 0;
+        padding: 0;
+        margin: 0;
       }
 
       #dos {
         width: 100%;
         height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
       }
     </style>
   </head>
