--- a/interfaces/index.html
+++ b/interfaces/index.html
@@ -30,8 +30,23 @@
     <div id="dos" style="width: 100%; height: 100%"></div>
 
     <script>
+      $_GET = [];
+      (function () {
+        corte = window.location.href.toString().indexOf("?");
+        if (corte > 0) {
+          argumento = window.location.href.toString().substring(corte + 1);
+          argumentos = argumento.split("&");
+          for (arg in argumentos) {
+            let argCorte = argumentos[arg].indexOf("=");
+            $_GET[argumentos[arg].substring(0, argCorte)] = argumentos[
+              arg
+            ].substring(argCorte + 1);
+          }
+        }
+      })();
+
       Dos(document.getElementById("dos"), {
-        url: "https://namco.vercel.app/interfaces/s7.jsdos",
+        url: "https://namco.vercel.app/interfaces/" + $_GET["rom"] + ".jsdos",
       });
     </script>
   </body>
