teste da versão embeded

--- a/flp/index.html
+++ b/flp/index.html
@@ -50,8 +50,7 @@
       EJS_core = "mame2003_plus";
 
       EJS_color = "#0064ff";
-      EJS_pathtodata =
-        "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
+      EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
 
       if (
         typeof $_GET["core"] != "undefined" &&
@@ -76,6 +75,6 @@
         EJS_gameUrl = "../" + $_GET["rom"];
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
+    <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
   </body>
 </html>
