mudando um pouco a base

--- a/flp/index.html
+++ b/flp/index.html
@@ -47,7 +47,7 @@
       // EJS_core = "arcade";
       // EJS_core = "fbneo";
 
-      EJS_core = "mame2003_plus";
+      EJS_core = "atari2600";
 
       EJS_color = "#0064ff";
       EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
@@ -65,7 +65,7 @@
       // Lightgun
       EJS_lightgun = false; // can be true or false
 
-      EJS_gameUrl = "../files/kicker.zip";
+      EJS_gameUrl = "https://namco.vercel.app/files/frg.b";
 
       if (
         typeof $_GET["rom"] != "undefined" &&
