--- a/canary/index.html
+++ b/canary/index.html
@@ -87,8 +87,8 @@
       }
 
       // Path to the data directory
-      EJS_pathtodata = "data/";
+      EJS_pathtodata = "https://cdn.emulatorjs.org/nightly/data/";
     </script>
-    <script src="data/loader.js"></script>
+    <script src="https://cdn.emulatorjs.org/nightly/data/loader.js"></script>"></script>
   </body>
 </html>
