--- a/a2/index.html
+++ b/a2/index.html
@@ -2,23 +2,23 @@
 <html>
   <head>
 <title>Apple ][+</title>
-<script type="text/javascript" src="6502.js"></script>
-<script type="text/javascript" src="6502-test.js"></script>
-<script type="text/javascript" src="apple2.js"></script>
-<script type="text/javascript" src="apple2-disk-controller.js"></script>
-<script type="text/javascript" src="apple2-language-card.js"></script>
-<script type="text/javascript" src="apple2+.disk.rom.js"></script>
-<script type="text/javascript" src="apple2+.rom.js"></script>
-<script type="text/javascript" src="apple2+.charset.js"></script>
-<script type="text/javascript" src="apple2-video-canvas.js"></script>
-<script type="text/javascript" src="sylvester-0.1.3/sylvester.src.js"></script>
-<script type="text/javascript" src="glUtils.js"></script>
-<script type="text/javascript" src="apple2-video-webgl.js"></script>
-<script type="text/javascript" src="apple2-speaker-audiocontext.js"></script>
-<script type="text/javascript" src="dos3.3.dsk.js"></script>
-<script type="text/javascript" src="socket.io/socket.io.js"></script>
-<script type="text/javascript" src="apple2-websocket-client.js"></script>
-<link rel="stylesheet" href="style.css" media="screen" />
+<script type="text/javascript" src="./6502.js"></script>
+<script type="text/javascript" src="./6502-test.js"></script>
+<script type="text/javascript" src="./apple2.js"></script>
+<script type="text/javascript" src="./apple2-disk-controller.js"></script>
+<script type="text/javascript" src="./apple2-language-card.js"></script>
+<script type="text/javascript" src="./apple2+.disk.rom.js"></script>
+<script type="text/javascript" src="./apple2+.rom.js"></script>
+<script type="text/javascript" src="./apple2+.charset.js"></script>
+<script type="text/javascript" src="./apple2-video-canvas.js"></script>
+<script type="text/javascript" src="./sylvester-0.1.3/sylvester.src.js"></script>
+<script type="text/javascript" src="./glUtils.js"></script>
+<script type="text/javascript" src="./apple2-video-webgl.js"></script>
+<script type="text/javascript" src="./apple2-speaker-audiocontext.js"></script>
+<script type="text/javascript" src="./dos3.3.dsk.js"></script>
+<script type="text/javascript" src="./socket.io/socket.io.js"></script>
+<script type="text/javascript" src="./apple2-websocket-client.js"></script>
+<link rel="stylesheet" href="./style.css" media="screen" />
 </head>
 <body>
 <h1>Apple ][+</h1>
@@ -52,7 +52,7 @@ Disk:
 <select id="disk"></select><a id="disk_link" href="#">🔗</a>
 <pre><div id="debug"></div></pre>
 
-<script type="text/javascript" src="platform.js"></script>
+<script type="text/javascript" src="./platform.js"></script>
 <script type="text/javascript">
 {
     function replace_contents(div, new_stuff) {
