mais uma tentativa de resolver o problema dos diretorios relativos

--- a/a2/index.html
+++ b/a2/index.html
@@ -8,23 +8,23 @@ https://porkrind.org/a2/disk/index.json
 <html>
   <head>
 <title>Apple ][+</title>
-<script type="text/javascript" src="./a2/6502.js"></script>
-<script type="text/javascript" src="./a2/6502-test.js"></script>
-<script type="text/javascript" src="./a2/apple2.js"></script>
-<script type="text/javascript" src="./a2/apple2-disk-controller.js"></script>
-<script type="text/javascript" src="./a2/apple2-language-card.js"></script>
-<script type="text/javascript" src="./a2/apple2+.disk.rom.js"></script>
-<script type="text/javascript" src="./a2/apple2+.rom.js"></script>
-<script type="text/javascript" src="./a2/apple2+.charset.js"></script>
-<script type="text/javascript" src="./a2/apple2-video-canvas.js"></script>
-<script type="text/javascript" src="./a2/sylvester-0.1.3/sylvester.src.js"></script>
-<script type="text/javascript" src="./a2/glUtils.js"></script>
-<script type="text/javascript" src="./a2/apple2-video-webgl.js"></script>
-<script type="text/javascript" src="./a2/apple2-speaker-audiocontext.js"></script>
-<script type="text/javascript" src="./a2/dos3.3.dsk.js"></script>
-<script type="text/javascript" src="./a2/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="./a2/apple2-websocket-client.js"></script>
-<link rel="stylesheet" href="./a2/style.css" media="screen" />
+<script type="text/javascript" src="../a2/6502.js"></script>
+<script type="text/javascript" src="../a2/6502-test.js"></script>
+<script type="text/javascript" src="../a2/apple2.js"></script>
+<script type="text/javascript" src="../a2/apple2-disk-controller.js"></script>
+<script type="text/javascript" src="../a2/apple2-language-card.js"></script>
+<script type="text/javascript" src="../a2/apple2+.disk.rom.js"></script>
+<script type="text/javascript" src="../a2/apple2+.rom.js"></script>
+<script type="text/javascript" src="../a2/apple2+.charset.js"></script>
+<script type="text/javascript" src="../a2/apple2-video-canvas.js"></script>
+<script type="text/javascript" src="../a2/sylvester-0.1.3/sylvester.src.js"></script>
+<script type="text/javascript" src="../a2/glUtils.js"></script>
+<script type="text/javascript" src="../a2/apple2-video-webgl.js"></script>
+<script type="text/javascript" src="../a2/apple2-speaker-audiocontext.js"></script>
+<script type="text/javascript" src="../a2/dos3.3.dsk.js"></script>
+<script type="text/javascript" src="../a2/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="../a2/apple2-websocket-client.js"></script>
+<link rel="stylesheet" href="../a2/style.css" media="screen" />
 
 <script>
     $_GET = [];
@@ -76,7 +76,7 @@ Disk:
 <select id="disk"></select><a id="disk_link" href="#">🔗</a>
 <pre><div id="debug"></div></pre>
 
-<script type="text/javascript" src="./a2/platform.js"></script>
+<script type="text/javascript" src="../a2/platform.js"></script>
 <script type="text/javascript">
 {
     function replace_contents(div, new_stuff) {
