--- a/a2/fit.html
+++ b/a2/fit.html
@@ -247,7 +247,7 @@ Disk:
     left: 20px;
     width: revert !important;
     height: calc(100dvh - 40px) !important;
-    margin-left: calc(50vw - ((4 * 100dvh) / 6)) !important;
+    margin-left: calc(50vw - ((4 * 100dvh) / 6) - 40px) !important;
 
     }
 </style>
