--- a/st/index.html
+++ b/st/index.html
@@ -7,24 +7,24 @@
 		<title>Atari ST</title>
 		<link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="estyjs.css" />
-		<script src="jquery/jquery-1.9.1.js"></script>
-		<script src="jquery/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="code.jquery.com" integrity="sha256-wS9gmRhXg72w0VZz9qR90U6prx8yqMzUFcWSUVqU0OA=" crossorigin="anonymous"></script>
+		<script src="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
 
-		<script src="estyjs.js"></script>
-		<script src="processor.js"></script>
-		<script src="keyboard.js"></script>
-		<script src="mfp.js"></script>
-		<script src="fdc.js"></script>
-		<script src="io.js"></script>
-		<script src="bug.js"></script>
-		<script src="display.js"></script>
-		<script src="memory.js"></script>
-		<script src="snapshot.js"></script>
-		<script src="sound.js"></script>
-		<script src="main.js"></script>
-        <script src="files.js"></script>
-        <script src="js-unzip.js"></script>
-        <script src="rawinflate.js"></script>
+		<script src="./estyjs.js"></script>
+		<script src="./processor.js"></script>
+		<script src="./keyboard.js"></script>
+		<script src="./mfp.js"></script>
+		<script src="./fdc.js"></script>
+		<script src="./io.js"></script>
+		<script src="./bug.js"></script>
+		<script src="./display.js"></script>
+		<script src="./memory.js"></script>
+		<script src="./snapshot.js"></script>
+		<script src="./sound.js"></script>
+		<script src="./main.js"></script>
+        <script src="./files.js"></script>
+        <script src="./js-unzip.js"></script>
+        <script src="./rawinflate.js"></script>
 		
 
 		<script>
