--- a/st/index.html
+++ b/st/index.html
@@ -5,8 +5,7 @@
 <html>
 	<head>
 		<title>Atari ST</title>
-		<link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="estyjs.css" />
+
 		<script
   src="https://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
@@ -41,51 +40,7 @@
 		</script>
 	</head>
 	<body>
-		<header>EstyJS - The Javascript Atari ST Emulator</header>
-		<div id="accordion">
-			<h3>Atari ST</h3>
-			<div>	
-                <img src="Atari_1040STf.jpg"/>
-                The Atari ST was a 16 bit home computer that was very popular in the late 80's and early 90's.
-                It was the direct competitor of the Commodore Amiga and both machines were based upon the 68000 cpu.
-				<br/><br/>
-                It was first released in 1985 and was very sucessful in the professional music industry due to having MIDI ports as standard.						
-			</div>
-			<h3>EstyJS</h3>
-			<div>EstyJS is a javascript based emulator for the Atari ST. I was inspired to write this after completing the first release of my Acorn Electron emulator ElkJS.
-			<br/><br/>
-			<img src="Atari 520ST_inside.jpg"/><br/><br/>
-			EstyJS aims to emulate the ST accurately enough to be able to play many of the classic games made for this machine.
-			<br/><br />
-			The sourcecode for this emulator is available in my <a href="https://github.com/dmcoles/estyjs" >github</a> repository.
-			
-			<br/><br/>
-            Please visit my forum to leave feedback, report bugs, talk about these (and other) JavaScript emulators <a href="http://emulatejs.englishboard.net/" >EmulateJS</a>
-			</div>
-			<h3>Usage</h3>
-            <div>
-				Work in progress<br/><br/>
-				Currently there are some things not emulated:
-				<ol>
-					<li>writing to floppies</li>
-					<li>Partial keyboard/mouse/joystick</li>
-					<li>timer pulse width & high accuracy < 1 scanline </li>
-					<li>border effects</li>
-				</ol>
-                <br/>
-				Hints:<br/>
-				<br/>Joystick 1 is emulated using cursor keys and ctrl (or a real usb joypad).
-				<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			</div>
-			
-			<h3>Credits</h3>
-			<div>
-			<u>EstyJS</u><br/><br/>
-			68000 emulation core - Rupert Hausberger (adapted from <a href="http://scriptedamigaemulator.net/">SAE</a> adaptation by Darren Coles)<br/><br/>
-			Atari ST image from wikipedia by <a href="http://en.wikipedia.org/wiki/File:Atari_1040STf.jpg"> Bill Bertram </a> <br/><br/>
-			Atari ST internals image from <a href="http://retrospec.sgn.net/users/tomcat/miodrag/Atari_ST/Atari_ST.htm" >retrospec</a>  <br/><br/>
-			Everything else - (c) Darren Coles 2013.<br/><br/>
-			</div>
+		
         </div>
 		<div id="estyjs">
 			<canvas id = "EstyJsOutput" width="640" height="400" >
@@ -166,6 +121,31 @@
             </div>
 		</div>
 		
+        <style>
+            html, body {
+                border: 0;
+                margin: 0;
+                background-color: #000000;
+                overflow: hidden;
+            }
+
+            .estyjs {
+                width: 100%;
+                height: 100dvh;
+            }
+
+            .EstyJsOutput {
+
+                max-width: calc((100dvh * 1.6)) !important;
+                width: 100%;
+                margin-left: max(0px, calc((100% - (100dvh * 1.6)) / 2));
+
+            }
+        </style>
+
+        <script>
+            lockMouse();
+        </script>
 		
 	</body>
 </html>
