infomação do site original

--- a/st/index.html
+++ b/st/index.html
@@ -1,5 +1,9 @@
 
 <!DOCTYPE HTML>
+<!-- site original:
+ https://estyjs.azurewebsites.net/
+ 
+ -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 <html>
