correções do css

--- a/st/index.html
+++ b/st/index.html
@@ -133,12 +133,12 @@
                 overflow: hidden;
             }
 
-            .estyjs {
+            #estyjs {
                 width: 100%;
                 height: 100dvh;
             }
 
-            .EstyJsOutput {
+            #EstyJsOutput {
 
                 max-width: calc((100dvh * 1.6)) !important;
                 width: 100%;
