--- a/a3/apple2js.html
+++ b/a3/apple2js.html
@@ -23,14 +23,14 @@
 <meta name="description" content="Apple ][js is an Apple ][ emulator written using only JavaScript and HTML5. It has color display, sound and disk support. It works best in the Chrome and Safari browsers." />
 <meta name="keywords" content="apple2,apple,ii,javascript,emulator,html5" />
 
-<link rel="apple-touch-icon" href="img/webapp-iphone.png" />
-<link rel="apple-touch-icon" size="72x72" href="img/webapp-ipad.png" />
-<link rel="shortcut icon" href="img/logoicon.png" />
-<link rel="stylesheet" type="text/css" href="css/apple2.css" />
+<link rel="apple-touch-icon" href="https://namco.vercel.app/a3/img/webapp-iphone.png" />
+<link rel="apple-touch-icon" size="72x72" href="https://namco.vercel.app/a3/img/webapp-ipad.png" />
+<link rel="shortcut icon" href="https://namco.vercel.app/a3/img/logoicon.png" />
+<link rel="stylesheet" type="text/css" href="https://namco.vercel.app/a3/css/apple2.css" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" />
 
 <!-- Disk Index -->
-<script type="text/javascript" src="json/disks/index.js"></script>
+<script type="text/javascript" src="https://namco.vercel.app/a3/json/disks/index.js"></script>
 
 </head>
 <body class="apple2"
@@ -319,6 +319,6 @@
       </filter>
   </svg>
 
-  <script src="dist/main2.bundle.js"></script>
+  <script src="https://namco.vercel.app/a3/dist/main2.bundle.js"></script>
 </body>
 </html>
